# Yijun_LocalOpenfoam_viaLLM

./: .gitignore  README.md  USER_GUIDANCE.md  nl-cfd-solver  planning.md  problem_description.md
project/: README.md  environment.yml  pyproject.toml  requirements.txt
project/scripts/: run_docker_simulation.sh  run_openfoam_docker.sh  setup_colima.sh
project/src/cfd_workflow/: __init__.py  cli.py  models.py  workflow.py
project/src/cfd_workflow/agents/: __init__.py  base.py  case.py  parser.py  physics.py  report.py  setup_review.py  simulation.py  state.py  visualization.py
project/src/cfd_workflow/crew/: __init__.py  definitions.py  flow.py  tools.py
project/src/cfd_workflow/openfoam/: __init__.py  case_generator.py  docker_runner.py  monitor.py  runner.py
project/src/cfd_workflow/parser/: __init__.py  nl_parser.py  units.py
project/src/cfd_workflow/physics/: __init__.py  parameters.py
project/src/cfd_workflow/postprocess/: __init__.py  visualize.py
project/templates/cylinder_2d/: Allrun.j2
project/templates/cylinder_2d/0/: U.j2  p.j2
project/templates/cylinder_2d/constant/: turbulenceProperties.j2
project/templates/cylinder_2d/system/: blockMeshDict.j2  snappyHexMeshDict.j2
project/templates/cylinder_3d/0/: U.j2  p.j2
project/templates/cylinder_3d/constant/: transportProperties.j2
project/templates/cylinder_3d/system/: blockMeshDict.j2  controlDict.j2  fvSchemes.j2  fvSolution.j2  (+1 more)
project/tests/unit/: test_case_generator.py  test_crew_agents.py  test_docker_runner.py  test_monitor.py  test_nl_parser.py  test_parameters.py  test_units.py
(+6 files in other folders)
