[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cfd-workflow"
version = "0.1.0"
description = "Natural language driven CFD workflow builder for cylinder flow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "numpy>=1.24",
    "typer>=0.9",
    "rich>=13.0",
    "matplotlib>=3.7",
    "pyvista>=0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
cfd-workflow = "cfd_workflow.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "openfoam: tests requiring OpenFOAM installation",
    "slow: long-running simulation tests",
]
